Fix typo in german

--- a/locales/de.json
+++ b/locales/de.json
@@ -111,7 +111,7 @@
         "message": "Oben links"
     },
     "settings_right_top": {
-        "message": "Oben rects"
+        "message": "Oben rechts"
     },
     "settings_left_bottom": {
         "message": "Unten links"
