--- a/locales/pt-BR.meta.json
+++ b/locales/pt-BR.meta.json
@@ -1,7 +1,7 @@
 {
     "extension": {
         "assistant": {
-            "name": "Assistente do AdGuard",
+            "name": "AdGuard Assistente",
             "description": "Fornece uma maneira f\u00e1cil e conveniente de gerenciar a filtragem diretamente do seu navegador"
         }
     }
