Fix #154 update locales

--- a/locales/de.meta.json
+++ b/locales/de.meta.json
@@ -1,7 +1,7 @@
 {
     "extension": {
         "assistant": {
-            "name": "Adguard-Assistent",
+            "name": "AdGuard-Assistent",
             "description": "Bietet einen einfachen und n\u00fctzlichen Weg die Filterung direkt im Browser zu verwalten"
         }
     }
