--- a/locales/en.json
+++ b/locales/en.json
@@ -93,7 +93,7 @@
         "message": "This website has excellent reputation\naccording to "
     },
     "settings_choose_size_and_position": {
-        "message": "Adjust Adguard Assistant size and position"
+        "message": "Adjust AdGuard Assistant size and position"
     },
     "settings_icon_size": {
         "message": "Icon size:"
