--- a/locales/es-419.json
+++ b/locales/es-419.json
@@ -93,7 +93,7 @@
         "message": "Esta p\u00e1gina tiene excelente reputaci\u00f3n \nseg\u00fan "
     },
     "settings_choose_size_and_position": {
-        "message": "Ajustar tama\u00f1o y posici\u00f3n de Adguard Assistant"
+        "message": "Ajustar tama\u00f1o y posici\u00f3n de AdGuard Assistant"
     },
     "settings_icon_size": {
         "message": "Tama\u00f1o del icono:"
