--- a/locales/it.json
+++ b/locales/it.json
@@ -93,7 +93,7 @@
         "message": "Questo sito ha un'ottima reputazione\n\nsecondo "
     },
     "settings_choose_size_and_position": {
-        "message": "Regola dimensione e posizione di Assistente Adguard"
+        "message": "Regola dimensione e posizione di Assistente AdGuard"
     },
     "settings_icon_size": {
         "message": "Grandezza dell'icona:"
