--- a/locales/pl.json
+++ b/locales/pl.json
@@ -93,7 +93,7 @@
         "message": "Ta strona internetowa ma doskona\u0142\u0105 reputacj\u0119 zgodnie z"
     },
     "settings_choose_size_and_position": {
-        "message": "Dostosuj rozmiar i pozycj\u0119 Asystenta Adguarda"
+        "message": "Dostosuj rozmiar i pozycj\u0119 Asystenta AdGuarda"
     },
     "settings_icon_size": {
         "message": "Rozmiar ikony:"
