--- a/locales/pl.meta.json
+++ b/locales/pl.meta.json
@@ -1,7 +1,7 @@
 {
     "extension": {
         "assistant": {
-            "name": "Asystent Adguarda",
+            "name": "Asystent AdGuarda",
             "description": "Zapewnia \u0142atwy i wygodny spos\u00f3b na zarz\u0105dzanie filtrowaniem bezpo\u015brednio z przegl\u0105darki"
         }
     }
