--- a/locales/ar.json
+++ b/locales/ar.json
@@ -93,7 +93,7 @@
         "message": "\u0647\u0630\u0627 \u0627\u0644\u0645\u0648\u0642\u0639 \u0644\u062f\u064a\u0647 \u0633\u0645\u0639\u0629 \u0645\u0645\u062a\u0627\u0632\u0629 \n\u0648\u0641\u0642\u0627 \u0644 "
     },
     "settings_choose_size_and_position": {
-        "message": "\u0636\u0628\u0637 \u062d\u062c\u0645 \u0645\u0633\u0627\u0639\u062f Adguard \u0648\u0645\u0648\u0636\u0639\u0647"
+        "message": "\u0636\u0628\u0637 \u062d\u062c\u0645 \u0645\u0633\u0627\u0639\u062f AdGuard \u0648\u0645\u0648\u0636\u0639\u0647"
     },
     "settings_icon_size": {
         "message": "\u062d\u062c\u0645 \u0627\u0644\u0631\u0645\u0632:"
