--- a/locales/es-419.meta.json
+++ b/locales/es-419.meta.json
@@ -1,7 +1,7 @@
 {
     "extension": {
         "assistant": {
-            "name": "Adguard Assistant",
+            "name": "AdGuard Assistant",
             "description": "Proporciona una forma f\u00e1cil y c\u00f3moda de manejar el filtrado desde el navegador"
         }
     }
