--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,4 +1,6 @@
 {
+    "assistant_select_element_start": "\u0421\u0442\u0430\u0440\u0442",
+    "assistant_select_element_text": "Choose an element on the page to block. Refresh the page to cancel the element blocking mode.",
     "menu_filtration_status": {
         "message": "\u0424\u0438\u043b\u044c\u0442\u0440\u0430\u0446\u0438\u044f \u043d\u0430 \u044d\u0442\u043e\u043c \u0441\u0430\u0439\u0442\u0435"
     },
