update locales in the src

--- a/locales/zh-TW.json
+++ b/locales/zh-TW.json
@@ -59,7 +59,7 @@
         "message": "\u5c01\u9396\u76f8\u4f3c\u4e4b\u7269"
     },
     "assistant_another_element": {
-        "message": "\u9078\u64c7\u53e6\u4e00\u500b\u5143\u4ef6"
+        "message": "\u9078\u64c7\u4e0d\u540c\u7684\u5143\u4ef6"
     },
     "assistant_preview": {
         "message": "\u9810\u89bd"
