--- a/locales/cs.json
+++ b/locales/cs.json
@@ -59,7 +59,7 @@
         "message": "Blokovat podobn\u00e9"
     },
     "assistant_another_element": {
-        "message": "Vyber dal\u0161\u00ed element"
+        "message": "Vyber jin\u00fd prvek"
     },
     "assistant_preview": {
         "message": "N\u00e1hled"
