--- a/locales/pt-BR.json
+++ b/locales/pt-BR.json
@@ -59,7 +59,7 @@
         "message": "Bloquear semelhante"
     },
     "assistant_another_element": {
-        "message": "Selecionar outro elemento"
+        "message": "Selecione um elemento diferente"
     },
     "assistant_preview": {
         "message": "Ver pr\u00e9via"
