#261 fix some wot phrases

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -80,22 +80,22 @@
         "message": "Ukon\u010dit n\u00e1hled"
     },
     "wot_unknown_description": {
-        "message": "Pov\u011bst t\u00e9to webov\u00e9 str\u00e1nky nen\u00ed definov\u00e1na podle"
+        "message": "Pov\u011bst t\u00e9to webov\u00e9 str\u00e1nky nen\u00ed definov\u00e1na podle $1"
     },
     "wot_bad_description": {
-        "message": "Tato webov\u00e1 str\u00e1nka m\u00e1 velmi \u0161patnou pov\u011bst \npodle "
+        "message": "Tato webov\u00e1 str\u00e1nka m\u00e1 velmi \u0161patnou pov\u011bst \npodle $1"
     },
     "wot_poor_description": {
-        "message": "Tato webov\u00e1 str\u00e1nka m\u00e1 \u0161patnou pov\u011bst \npodle  "
+        "message": "Tato webov\u00e1 str\u00e1nka m\u00e1 \u0161patnou pov\u011bst \npodle $1"
     },
     "wot_unsatisfactory_description": {
-        "message": "Tato webov\u00e1 str\u00e1nka m\u00e1 \u0161patnou pov\u011bst \npodle  "
+        "message": "Tato webov\u00e1 str\u00e1nka m\u00e1 \u0161patnou pov\u011bst \npodle $1"
     },
     "wot_good_description": {
-        "message": "Tato webov\u00e1 str\u00e1nka m\u00e1 dobrou pov\u011bst \npodle  "
+        "message": "Tato webov\u00e1 str\u00e1nka m\u00e1 dobrou pov\u011bst \npodle $1"
     },
     "wot_excellent_description": {
-        "message": "Tato webov\u00e1 str\u00e1nka m\u00e1 v\u00fdbornou pov\u011bst \npodle  "
+        "message": "Tato webov\u00e1 str\u00e1nka m\u00e1 v\u00fdbornou pov\u011bst \npodle $1"
     },
     "settings_choose_size_and_position": {
         "message": "Upravit velikost a pozici AdGuard Asistenta"
