--- a/locales/fr.json
+++ b/locales/fr.json
@@ -80,22 +80,22 @@
         "message": "Sortir de la previsualisation "
     },
     "wot_unknown_description": {
-        "message": "Aucune d\u00e9finition de r\u00e9putation de ce site web selon "
+        "message": "La d\u00e9finition de la r\u00e9putation de ce site web n'est pas d\u00e9finie par $1"
     },
     "wot_bad_description": {
-        "message": "Ce site web a tr\u00e8s mauvaise r\u00e9putation selon"
+        "message": "Ce site web a tr\u00e8s mauvaise r\u00e9putation selon $1"
     },
     "wot_poor_description": {
-        "message": "Ce site web a une r\u00e9putation m\u00e9diocre selon"
+        "message": "Ce site web a mauvaise r\u00e9putation selon $1"
     },
     "wot_unsatisfactory_description": {
-        "message": "Ce site web a mauvaise reputation selon"
+        "message": "Ce site web a une reputation m\u00e9diocre selon $1"
     },
     "wot_good_description": {
-        "message": "Ce site a bonne r\u00e9putation selon"
+        "message": "Ce site a bonne r\u00e9putation selon $1"
     },
     "wot_excellent_description": {
-        "message": "Ce site a une excellente r\u00e9putation selon"
+        "message": "Ce site a une r\u00e9putation excellente selon $1"
     },
     "settings_choose_size_and_position": {
         "message": "Affiner la taille et la position de l'assistant AdGuard "
