--- a/locales/da.json
+++ b/locales/da.json
@@ -80,22 +80,22 @@
         "message": "Exit forh\u00e5ndsvisning"
     },
     "wot_unknown_description": {
-        "message": "Hjemmesidens omd\u00f8mme er ikke defineret af"
+        "message": "Hjemmesidens omd\u00f8mme er ikke defineret af $1"
     },
     "wot_bad_description": {
-        "message": "Denne hjemmeside har et meget d\u00e5rligt omd\u00f8mme if\u00f8lge "
+        "message": "Denne hjemmeside har et meget d\u00e5rligt omd\u00f8mme if\u00f8lge $1"
     },
     "wot_poor_description": {
-        "message": "Denne hjemmeside har et d\u00e5rligt omd\u00f8mme if\u00f8lge "
+        "message": "Denne hjemmeside har et d\u00e5rligt omd\u00f8mme if\u00f8lge $1"
     },
     "wot_unsatisfactory_description": {
-        "message": "Denne hjemmeside har et d\u00e5rligt omd\u00f8mme if\u00f8lge "
+        "message": "Denne hjemmeside har et d\u00e5rligt omd\u00f8mme if\u00f8lge $1"
     },
     "wot_good_description": {
-        "message": "Denne hjemmeside har et godt omd\u00f8mme if\u00f8lge "
+        "message": "Denne hjemmeside har et godt omd\u00f8mme if\u00f8lge $1"
     },
     "wot_excellent_description": {
-        "message": "Denne hjemmeside har et fremragende omd\u00f8mme if\u00f8lge "
+        "message": "Denne hjemmeside har et fremragende omd\u00f8mme \nif\u00f8lge $1"
     },
     "settings_choose_size_and_position": {
         "message": "Juster AdGuard Assistent st\u00f8rrelse og position"
