--- a/locales/pt-BR.json
+++ b/locales/pt-BR.json
@@ -80,22 +80,22 @@
         "message": "Sair da pr\u00e9via"
     },
     "wot_unknown_description": {
-        "message": "A reputa\u00e7\u00e3o deste site ainda n\u00e3o foi definida por"
+        "message": "A reputa\u00e7\u00e3o deste site ainda n\u00e3o foi definida por $1"
     },
     "wot_bad_description": {
-        "message": "Este site tem uma reputa\u00e7\u00e3o muito ruim\nde acordo com "
+        "message": "Este site tem uma reputa\u00e7\u00e3o muito ruim\nde acordo com $1"
     },
     "wot_poor_description": {
-        "message": "Este site tem uma m\u00e1 reputa\u00e7\u00e3o\nde acordo com "
+        "message": "Este site tem uma m\u00e1 reputa\u00e7\u00e3o\nde acordo com $1"
     },
     "wot_unsatisfactory_description": {
-        "message": "Este site tem uma reputa\u00e7\u00e3o ruim\nde acordo com "
+        "message": "Este site tem uma reputa\u00e7\u00e3o ruim\nde acordo com $1"
     },
     "wot_good_description": {
-        "message": "Este site tem uma boa reputa\u00e7\u00e3o\nde acordo com "
+        "message": "Este site tem uma boa reputa\u00e7\u00e3o\nde acordo com $1"
     },
     "wot_excellent_description": {
-        "message": "Este site tem uma excelente reputa\u00e7\u00e3o\nde acordo com "
+        "message": "Este site tem uma excelente reputa\u00e7\u00e3o\nde acordo com $1"
     },
     "settings_choose_size_and_position": {
         "message": "Ajuste o tamanho e posi\u00e7\u00e3o do Assistente do AdGuard"
