issue win #2697, basic resolve + update translations

--- a/locales/pt-PT.json
+++ b/locales/pt-PT.json
@@ -59,7 +59,7 @@
         "message": "Bloquear semelhante"
     },
     "assistant_another_element": {
-        "message": "Seleccionar outro elemento"
+        "message": "Seleccionar um elemento diferente"
     },
     "assistant_preview": {
         "message": "Previsualiza\u00e7\u00e3o"
