--- a/locales/tr.json
+++ b/locales/tr.json
@@ -98,7 +98,7 @@
         "message": "Bu site $1 de\u011ferlendirmesine g\u00f6re\nm\u00fckemmel bir itibara sahip"
     },
     "settings_choose_size_and_position": {
-        "message": "AdGuard Assistant'\u0131n boyut ve konumunu ayarla"
+        "message": "AdGuard Assistant'\u0131n eklentisi boyut ve konumunu ayarla"
     },
     "settings_icon_size": {
         "message": "Simge boyutu:"
