--- a/locales/tr.meta.json
+++ b/locales/tr.meta.json
@@ -1,7 +1,7 @@
 {
     "extension": {
         "assistant": {
-            "name": "AdGuard Assistant",
+            "name": "AdGuard Assistant eklentisi",
             "description": "Filtrelemeyi, taray\u0131c\u0131dan do\u011frudan kolayca y\u00f6netmenizi sa\u011flar."
         }
     }
